# CTF-Challenge-Benchmark

./: .gitignore  .gitlab-ci.eval.yml  .gitlab-ci.yml  7.php  Dockerfile  LICENSE  README.md  dump.json  nextprime-RSA.hive-reward.json  pyproject.toml  setup.py
benchmark/: ccb_parser.py  dataset_models.py  hive_reward.py
check_valid_hive_reward_json.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
pwn1/: a-buffer-overflow.hive-reward.json  buffer-overflow.hive-reward.json  full_relro-buffer-overflow.hive-reward.json  shellcode.hive-reward.json
pwn3/: a-integer-overflow-vulnerability.hive-reward.json  format.hive-reward.json  view-shellcode.hive-reward.json
rewards/AIME/: 1983-1-AIME_DATASET.hive-reward.json  1983-10-AIME_DATASET.hive-reward.json  1983-11-AIME_DATASET.hive-reward.json  1983-12-AIME_DATASET.hive-reward.json  1983-13-AIME_DATASET.hive-reward.json  1983-14-AIME_DATASET.hive-reward.json  1983-15-AIME_DATASET.hive-reward.json  1983-2-AIME_DATASET.hive-reward.json  1983-3-AIME_DATASET.hive-reward.json  1983-4-AIME_DATASET.hive-reward.json  1983-5-AIME_DATASET.hive-reward.json  1983-6-AIME_DATASET.hive-reward.json  1983-7-AIME_DATASET.hive-reward.json  1983-8-AIME_DATASET.hive-reward.json  1983-9-AIME_DATASET.hive-reward.json  1984-1-AIME_DATASET.hive-reward.json  (+640 more)
scripts/: README..md  valid_hive_reward_json.py  validate.py
setup/: main.py
tests/: test_check_topic.py
tmp/: 1.php  10.php  11.php  12.php  13.php  14.py  15.php  16.py  17.php  18.php  19.php  2.php  20.js  21.php  22.php  24.php  3.php  4.php  5.php  6.php  7.py  8.js  9.js
(+38914 files in other folders)
